# riscv-vm

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  build.sh  nx.json  package-lock.json  package.json  repomix-output.xml  run.sh
.github/workflows/: deploy.yml  release-assets.yml  release-kernel.yml  release-relay.yml  release-riscv-vm.yml  release-trigger.yml
kernel/: CHANGELOG.md  Cargo.toml  README.md  link.x  memory.x
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  fs.rs  http.rs  init.rs  main.rs  net.rs  scripting.rs  tls.rs  uart.rs  virtio_net.rs  wasm.rs
kernel/src/cmd/: mod.rs
mkfs/: Cargo.toml  cargo.toml
mkfs/src/: lib.rs  main.rs
relay/: CHANGELOG.md  Cargo.toml  Dockerfile  project.json
relay/src/: hub.rs  main.rs  peer.rs  protocol.rs  proxy.rs
riscv-vm/: CHANGELOG.md  Cargo.toml  README.md  build.sh  cli.ts  index.ts  jit-worker.ts  node-worker.ts  package.json  project.json  tsconfig.json  worker.ts
riscv-vm/native/: .npmignore
riscv-vm/src/: bus.rs  clint.rs  console.rs  cpu.rs  decoder.rs  dram.rs  emulator.rs  lib.rs  main.rs  mmu.rs  net.rs  net_async.rs  net_libp2p.rs  net_webtransport.rs  plic.rs  shared_mem.rs  uart.rs  virtio.rs  worker.rs
riscv-vm/tsup/: index.ts  tsup.cli.ts  tsup.core.cjs.ts  tsup.core.esm.ts  tsup.jit-worker.ts  tsup.node-worker.ts
vm/: Cargo.toml
vm/.cargo/: config.toml
vm/src/: bus.rs  console.rs  cpu.rs  dram.rs  lib.rs  loader.rs  main.rs  uart.rs
web/: .dockerignore  Dockerfile  app.json  next.config.ts  package.json
web/public/: custom_kernel  riscv_vm_bg.wasm  vm_bg.wasm
(+25 files in other folders)
